--- a/obrigado/index.html
+++ b/obrigado/index.html
@@ -23,7 +23,7 @@
       <h2>Enquanto espera...</h2>
       <p class="subtitle">Gostaria de escutar uma música?</p>
       <h3>Se sim, basta apertar o Play!</h3>
-      <video controls loop src="https://drive.google.com/file/d/1MkWir1N1tIT7Nc4LBFKry2O_tNcHrEH3/view?usp=sharing"></video>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/C5fLxtJH2Qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <footer>
 
