--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
               name="b_f1b627c9008e7ebe2f84fafff_e6f3b2acdf" tabindex="-1" value=""></div>
 
-          <button class="send" type="submit">Receber Atualizações</button>
+          <button class="send" type="submit" onclick="redirect()">Receber Atualizações</button>
       </div>
       </form>
 
