--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <option value="bottle3">Pet 3L</option>
         </select>
 
-        <button class="button" type="submit" onclick="redirect()">Pedir</a></button>
+        <button class="button" type="submit" onclick="redirect()"">Pedir</a></button>
       </form>
       <script id="redirect" src="./assets/js/scripts.js"></script>
     </div>
@@ -101,7 +101,7 @@
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
               name="b_f1b627c9008e7ebe2f84fafff_e6f3b2acdf" tabindex="-1" value=""></div>
 
-          <button class="send" type="button" onclick="redirect()">Receber Atualizações</button>
+          <button class="send" type="submit" >Receber Atualizações</button>
       </div>
       </form>
 
