--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
           <input class="contact" type="email" name="EMAIL" id="mail" placeholder="email: example@gmail.com">
 
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signup-->
 
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
               name="b_f1b627c9008e7ebe2f84fafff_e6f3b2acdf" tabindex="-1" value=""></div>
